# NLP-Project

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  TEST_RESULTS.md  pyproject.toml  requirements.txt  test_analysis_modules.py  test_api.py  test_collection.py  test_database.py  test_nlp.py
api/: __init__.py  main.py
config/: config.yaml
data/processed/: cves_summary_20251205_113544.xlsx  cves_summary_20251208_223358.xlsx  cves_summary_20251210_134920.xlsx  statistics_20251205_113544.txt  statistics_20251208_223358.txt  statistics_20251210_134920.txt
docs/: resources.md  setup_guide.md
frontend/: ANALYTICS_COMPLETE.md  ANALYTICS_FEATURES.md  BUGFIX_EMPTY_CHARTS.md  CHANGES.md  README.md  app.js  index.html  styles.css
notebooks/: CVE_NLP_Pipeline.ipynb
scripts/: quick_test.py  setup_database.py
src/: __init__.py
src/analysis/: __init__.py  impact.py  statistics.py  trends.py
src/data_collection/: __init__.py  nvd_client.py
src/database/: __init__.py  models.py
src/nlp/: __init__.py  ner_extractor.py
src/preprocessing/: __init__.py  cleaner.py
src/utils/: __init__.py  config.py  logger.py
