[project]
name = "nlp-project"
version = "0.1.0"
description = "NLP pipeline for CVE analysis"
readme = "README.md"
requires-python = "==3.10.*"
authors = [{ name = "NLP-Project Team" }]
license = { text = "Proprietary" }

# Dependencies migrated from requirements.txt
dependencies = [
  "python-dotenv==1.0.0",
  "pyyaml==6.0.1",
  "requests==2.31.0",
  "beautifulsoup4==4.12.2",
  "lxml==4.9.3",
  "pandas==2.1.4",
  "numpy==1.26.2",
  "openpyxl==3.1.2",
  "spacy==3.7.2",
  "transformers==4.36.2",
  "torch==2.1.2",
  "sentencepiece==0.1.99",
  "nltk==3.8.1",
  "sqlalchemy==2.0.23",
  "alembic==1.13.1",
  "psycopg2-binary==2.9.9",
  "fastapi==0.108.0",
  "uvicorn[standard]==0.25.0",
  "pydantic==2.5.3",
  "python-multipart==0.0.6",
  "matplotlib==3.8.2",
  "seaborn==0.13.0",
  "plotly==5.18.0",
  "wordcloud==1.9.3",
  "scikit-learn==1.3.2",
  "tqdm==4.66.1",
  "click==8.1.7",
  "colorama==0.4.6",
  "rich==13.7.0",
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "httpx==0.25.2",
  "jupyter==1.0.0",
  "ipywidgets==8.1.1",
  "notebook==7.0.6",
  "ratelimit==2.2.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "."]
